@@ -490,42 +490,9 @@ shell_cmd_is_allowed (const char *cmd, char **safecmd, char **cmdname)
 #ifdef WIN32
 #undef system
 #define system fsyscp_system
-
 #if ENABLE_PIPES
-static int is_include_space(const char *s)
-{
-  char *p;
-  p = strchr(s, ' ');
-  if(p) return 1;
-  p = strchr(s, '\t');
-  if(p) return 1;
-  return 0;
-}
-
-static FILE *wbinpopen(const char *cmd, const char *mode)
-{
-  assert(cmd && mode);
-  if (is_include_space (cmd)) {
-    FILE *ret;
-    const char *p;
-    char *cmd2, *q;
-    cmd2 = xmalloc (strlen (cmd) + 3);
-    q = cmd2;
-    p = cmd;
-    *q++= '\"';
-    while(*p)
-      *q++ = *p++;
-    *q++ = '\"';
-    *q = '\0';
-    ret = fsyscp_popen (cmd2, mode);
-    free (cmd2);
-    return ret;
-  } else {
-    return fsyscp_popen (cmd, mode);
-  }
-}
 #undef popen
-#define popen wbinpopen
+#define popen fsyscp_popen
 #endif /* ENABLE_PIPES */
 #endif /* WIN32 */
 
